# demo_rag

./: .gitignore  pyproject.toml
docs/adr/: ADR_1_use-vllm-to-host-llm-models.md  ADR_2_use-langchain-to-handle-communication-between-vllm-and-other-components.md  ADR_3_use-streamlit-to-power-the-gui-interface.md  ADR_4_use-all-minilm-l6-v2-to-generate-embeddings.md
src/: app.py  data.py  embeddings.py  main.py  start_vLLM.bash
