[tool.poetry]
name = "src"
version = "0.0.0"
description = "Hello World"
license = "GNU Affero"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/NicholasSynovic/template_python"
repository = "https://github.com/NicholasSynovic/template_python"
keywords = ["Template"]
classifiers = ["Development Status :: 1 - Planning"]

[tool.poetry.dependencies]
python = "^3.10"
vllm = "^0.6.4.post1"
langchain = "0.3.8"
langchain-community = "0.3.8"
huggingface-hub = "^0.26.2"
streamlit = "^1.40.2"
datasets = "^3.1.0"
sentence-transformers = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
